[GitHub] - Fix Minimessage